baselines/intermediatebaselines/PEST2_7+2/tesc1/Docu/Grammatik
Grammatik von TESC
$Id: Grammatik,v 1.2 1999/01/11 12:14:22 swtech20 Exp $
-----------------------------------------------------------------------

TESC              ::= VAR EVENT STATE
  
VAR               ::= {"var" VARS}

VARS              ::= IDENTIFIER | "(" VARLIST ")"

VARLIST           ::= IDENTIFIER {"," VARLIST}

EVENT             ::= {"var" EVENTS}

EVENTS            ::= IDENTIFIER | "(" EVENTLIST ")"

EVENTLIST         ::= IDENTIFIER {"," EVENTLIST}

STATE             ::= AND_STATE | OR_STATE | BASIC_STATE

AND_STATE         ::= "and" IDENTIFIER 
                            AND_SUBSTATES 
                      "end" IDENTIFIER

AND_SUBSTATES     ::= OR_STATE {AND_SUBSTATES} | BASIC_STATE {AND_SUBSTATES}

OR_STATE          ::= "or " IDENTIFIER
                            OR_SUBSTATES CONNECTORS TRANSITIONS DEFAULTCON
                      "end" IDENTIFIER

OR_SUBSTATES      ::= STATE {OR_SUBSTATES}

OR_SUBSTATES      ::= STATE {OR_SUBSTATES}

BASIC_STATE       ::= "basic" IDENTIFIER

CONNECTORS        ::= CONNECTOR {CONNECTORS}

CONNECTOR         ::= "con" IDENTIFIER

TRANSITIONS       ::= TRANSITION TRANSITION

TRANSITION        ::= "from" TRANCHOR "to" TRANCHOR {"on" GUARD} {"do" ACTION}

TRANCHOR          ::= "UNDEF" | IDENTIFIER

DEFAULTCONS       ::=  DEFAULTCON {DEFAULTCON}

DEFAULTCON        ::= "default" IDENTIFIER

GUARD             ::= GUARDIMPLIES GUARD_REST

GUARD_REST        ::= {"<=>" GUARDIMPLIES GUARD_REST}

GUARDIMPLIES      ::= GUARDOR GUARDIMPLES_REST
   
GUARDIMPLIES_REST ::= {"=>" GUARDOR GUARDIMPLIES_REST}

GUARDOR           ::= GUARDAND GUARDOR_REST

GUARDOR_REST      ::= {"|" GUARDAND GUARDOR_REST}

GUARDAND          ::= GUARDNOT GUARDAND_REST

GUARDAND_REST     ::= {"&" GUARDNOT GUARDAND_REST}

GUARDNOT          ::= {"!"} GUARDID

GUARDID           ::= IDENTIFIER | COMPPATH | "(" GUARD ")"

COMPPATH          ::= (IN | ENTERED | EXITED) "(" PATH ")"

PATH              ::= IDENTIFIER {"." PATH}

ACTION            ::= IDENTIFIER | BOOLSTMT | "(" ACTIONLIST ")"

BOOLSTMT          ::= IDENTIFIER "=" (true | false | GUARD)

ACTIONLIST        ::= (IDENTIFIER | BOOLSTMT) {"," ACTIONLIST}

IDENTIFIER        ::= <Zeichen-/Ziffernkette>

-----------------------------------------------------------------------
$Log: Grammatik,v $
Revision 1.2  1999/01/11 12:14:22  swtech20
Updates.
